--- a/app/views/admin/sales.html.erb
+++ b/app/views/admin/sales.html.erb
@@ -1,5 +1,84 @@
 <%= render 'menu' %>
 
+<div class="row">
+  <div class="col-md-10">
+    <div class="panel-group" id="accordion">
+      <div class="panel panel-default">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              Show filters
+            </h4>
+          </div>
+        </a>
+        <div id="collapseOne" class="panel-collapse collapse <%= "in" if params[:commit] %>">
+          <div class="panel-body">
+            <%= form_tag(admin_sales_path, :method => "get", id: "search-form") do %>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="col-md-3">
+                    <strong class="pull-right">From</strong>
+                  </div>
+                  <div class="col-md-9">
+                    <%= date_select :date_from, params[:date_from], { order: [:day, :month, :year] }, { :class => "form-control date-control input-sm" }  %>
+                  </div>
+                </div>
+                  <div class="col-md-6">
+                  <div class="col-md-3">
+                    <strong class="pull-right">To</strong>
+                  </div>
+                  <div class="col-md-9">
+                    <%= date_select :date_to, "date", { order: [:day, :month, :year] }, { :class => "form-control date-control input-sm" }  %>
+                  </div>
+                </div>
+              </div>
+              <br />
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="col-md-3">
+                    <strong class="pull-right">Seller</strong>
+                  </div>
+                  <div class="col-md-9">
+                    <%= text_field_tag :seller, params[:seller], :class => "form-control input-sm" %>
+                  </div>
+                </div>
+                  <div class="col-md-6">
+                  <div class="col-md-3">
+                    <strong class="pull-right">Client</strong>
+                  </div>
+                  <div class="col-md-9">
+                    <%= text_field_tag :client, params[:client], :class => "form-control input-sm" %>
+                  </div>
+                </div>
+              </div>
+              <br />
+              <div class="row">
+                <div class="col-md-2 col-md-offset-1">
+                  <div class="btn-group">
+                    <%= submit_tag "Filter", :class => "btn btn-primary btn-sm" %>
+                    <%= link_to "Clear", admin_sales_path, :class => "btn btn-default btn-sm" %>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-2">
+    <div class="btn-group">
+      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+        Download <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li><a href="#">Excel</a></li>
+        <li><a href="#">CSV</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
