--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,25 +1,26 @@
-<h1>Listing clients</h1>
+<div class="page-header">
+  <h2>Clients</h2>
+</div>
 
-<table>
+<div class="table-responsive">
+<table class="table table-hover table-striped">
   <thead>
     <tr>
       <th>Client name</th>
-      <th colspan="3"></th>
+      <th>Margin</th>
+      <th>Revenue</th>
     </tr>
   </thead>
 
   <tbody>
     <% @clients.each do |client| %>
       <tr>
-        <td><%= client.name %></td>
-        <td><%= link_to 'Show', client %></td>
-        <td><%= link_to 'Edit', edit_client_path(client) %></td>
-        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= client(client) %></td>
+        <td><%= client.sales.sum(:margin) %></td>
+        <td><%= client.sales.sum(:revenue) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
+</div>
 <%= link_to 'New Client', new_client_path %>
