--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,16 @@
           </div><!-- /input-group -->
         </form>
         <ul class="nav navbar-nav navbar-right">
-          <li class="<%= currentpath(admin_index_path) %>"><%= link_to "Admin", admin_index_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li class="<%= currentpath(admin_users_path) %>"><%= link_to "Users", admin_users_path %></li>
+              <li class="<%= currentpath(admin_budgets_path) %>"><%= link_to "Budgets", admin_budgets_path %></li>
+              <li class="<%= currentpath(admin_offices_path) %>"><%= link_to "Offices", admin_offices_path %></li>
+              <li class="<%= currentpath(admin_sales_path) %>"><%= link_to "Sales", admin_sales_path %></li>
+              <li class="<%= currentpath(admin_pipelines_path) %>"><%= link_to "Pipelines", admin_pipelines_path %></li>
+            </ul>
+          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %> <b class="caret"></b></a>
             <ul class="dropdown-menu">
