--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -13,7 +13,6 @@
   </div>
 </div>
 
-
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
@@ -24,7 +23,7 @@
         <th><%= t('opportunities.total_revenue') %></th>
         <th><%= t('opportunities.weighted_margin') %></th>
         <th><%= t('opportunities.weighted_revenue') %></th>
-        <th><%= t('opportunities.probability') %></th>
+        <th colspan="2"><%= t('opportunities.probability') %></th>
       </tr>
     </thead>
 
@@ -38,6 +37,7 @@
           <td><strong><%= number_to_currency(opportunity.weighted_margin, unit: "", precision: 0, delimiter: " ") %></strong></td>
           <td><strong><%= number_to_currency(opportunity.weighted_revenue, unit: "", precision: 0, delimiter: " ") %></strong></td>
           <td><%= opportunity.probability %>%</td>
+          <td><%= link_to "Edit", opportunity_edit_path(opportunity), :class => "btn btn-default btn-xs" %></td>
         </tr>
       <% end %>
     </tbody>
@@ -52,126 +52,118 @@
         <h4 class="modal-title" id="myModalLabel">New opportunity</h4>
       </div>
       <div class="modal-body">
-       <script>
-          $(document).ready(function() { $(".select-search").select2(); });
-      </script>
-      <%= simple_form_for(@opportunity, :html => { :class => "form-horizontal" }) do |f| %>
-        <% if @opportunity.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@opportunity.errors.count, "error") %> prohibited this opportunity from being saved:</h2>
-
-            <ul>
-            <% @opportunity.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-            </ul>
+        <script>
+            $(document).ready(function() { $(".select-search").select2(); });
+        </script>
+        <%= simple_form_for(@opportunity, :html => { :class => "form-horizontal" }) do |f| %>
+          <% if @opportunity.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@opportunity.errors.count, "error") %> prohibited this opportunity from being saved:</h2>
+              <ul>
+                <% @opportunity.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+          <div class="form-group">
+            <%= f.label :client_id, "Client", :class => "col-xs-3 col-md-3 control-label" %>
+            <div class="col-xs-9 col-md-9">
+              <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "select-search" %>
+            </div>
           </div>
-        <% end %>
-
-  <div class="form-group">
-    <%= f.label :client_id, "Client", :class => "col-xs-3 col-md-3 control-label" %>
-    <div class="col-xs-9 col-md-9">
-      <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "select-search" %>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :software, :class => "col-xs-3 col-md-3 control-label" %>
-    <div class="col-xs-5 col-md-5 col-lg-6">
-      <div class="input-group">
-        <%= f.input_field :software, :class => "form-control", :placeholder => "Sum" %>
-        <span class="input-group-addon">NOK</span>
-      </div>
-    </div>
-    <div class="col-xs-4 col-md-4 col-lg-3">
-      <div class="input-group">
-        <%= f.input_field :software_rate, :class => "form-control", :placeholder => "80" %>
-        <span class="input-group-addon">%</span>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="form-group">
-    <%= f.label :semi, :class => "col-xs-3 col-md-3 control-label" %>
-    <div class="col-xs-5 col-md-5 col-lg-6">
-      <div class="input-group">
-        <%= f.input_field :semi, :class => "form-control", :placeholder => "Sum" %>
-        <span class="input-group-addon">NOK</span>
-      </div>
-    </div>
-    <div class="col-xs-4 col-md-4 col-lg-3">
-      <div class="input-group">
-        <%= f.input_field :semi_rate, :class => "form-control", :placeholder => "70" %>
-        <span class="input-group-addon">%</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :production, :class => "col-xs-3 col-md-3 control-label" %>
-    <div class="col-xs-5 col-md-5 col-lg-6">
-      <div class="input-group">
-        <%= f.input_field :production, :class => "form-control", :placeholder => "Sum" %>
-        <span class="input-group-addon">NOK</span>
-      </div>
-    </div>
-    <div class="col-xs-4 col-md-4 col-lg-3">
-      <div class="input-group">
-        <%= f.input_field :production_rate, :class => "form-control", :placeholder => "50" %>
-        <span class="input-group-addon">%</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :ads, :class => "col-xs-3 col-md-3 control-label" %>
-    <div class="col-xs-5 col-md-5 col-lg-6">
-      <div class="input-group">
-        <%= f.input_field :ads, :class => "form-control", :placeholder => "Sum" %>
-        <span class="input-group-addon">NOK</span>
-      </div>
-    </div>
-    <div class="col-xs-4 col-md-4 col-lg-3">
-      <div class="input-group">
-        <%= f.input_field :ads_rate, :class => "form-control", :placeholder => "15" %>
-        <span class="input-group-addon">%</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :other, :class => "col-xs-3 col-md-3 control-label" %>
-    <div class="col-xs-5 col-md-5 col-lg-6">
-      <div class="input-group">
-        <%= f.input_field :other, :class => "form-control", :placeholder => "Sum" %>
-        <span class="input-group-addon">NOK</span>
-      </div>
-    </div>
-    <div class="col-xs-4 col-md-4 col-lg-3">
-      <div class="input-group">
-        <%= f.input_field :other_rate, :class => "form-control", :placeholder => "0" %>
-        <span class="input-group-addon">%</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :closing_date, "Closing", :class => "col-xs-3 col-md-3 control-label" %>
-    <div class="col-xs-5 col-md-5 col-lg-6">
-      <%= f.date_field :closing_date, :class => "form-control", :placeholder => "dd.mm.yyyy" %>
-    </div>
-    <div class="col-xs-4 col-md-4 col-lg-3">
-      <div class="input-group">
-        <%= f.input_field :probability, :class => "form-control", :placeholder => "0" %>
-        <span class="input-group-addon">%</span>
-      </div>
-    </div>
-  </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <div class="form-group">
+            <%= f.label :software, :class => "col-xs-3 col-md-3 control-label" %>
+            <div class="col-xs-5 col-md-5 col-lg-6">
+              <div class="input-group">
+                <%= f.input_field :software, :class => "form-control", :placeholder => "Sum" %>
+                <span class="input-group-addon">NOK</span>
+              </div>
+            </div>
+            <div class="col-xs-4 col-md-4 col-lg-3">
+              <div class="input-group">
+                <%= f.input_field :software_rate, :class => "form-control", :placeholder => "80" %>
+                <span class="input-group-addon">%</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <%= f.label :semi, :class => "col-xs-3 col-md-3 control-label" %>
+            <div class="col-xs-5 col-md-5 col-lg-6">
+              <div class="input-group">
+                <%= f.input_field :semi, :class => "form-control", :placeholder => "Sum" %>
+                <span class="input-group-addon">NOK</span>
+              </div>
+            </div>
+            <div class="col-xs-4 col-md-4 col-lg-3">
+              <div class="input-group">
+                <%= f.input_field :semi_rate, :class => "form-control", :placeholder => "70" %>
+                <span class="input-group-addon">%</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <%= f.label :production, :class => "col-xs-3 col-md-3 control-label" %>
+            <div class="col-xs-5 col-md-5 col-lg-6">
+              <div class="input-group">
+                <%= f.input_field :production, :class => "form-control", :placeholder => "Sum" %>
+                <span class="input-group-addon">NOK</span>
+              </div>
+            </div>
+            <div class="col-xs-4 col-md-4 col-lg-3">
+              <div class="input-group">
+                <%= f.input_field :production_rate, :class => "form-control", :placeholder => "50" %>
+                <span class="input-group-addon">%</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <%= f.label :ads, :class => "col-xs-3 col-md-3 control-label" %>
+            <div class="col-xs-5 col-md-5 col-lg-6">
+              <div class="input-group">
+                <%= f.input_field :ads, :class => "form-control", :placeholder => "Sum" %>
+                <span class="input-group-addon">NOK</span>
+              </div>
+            </div>
+            <div class="col-xs-4 col-md-4 col-lg-3">
+              <div class="input-group">
+                <%= f.input_field :ads_rate, :class => "form-control", :placeholder => "15" %>
+                <span class="input-group-addon">%</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <%= f.label :other, :class => "col-xs-3 col-md-3 control-label" %>
+            <div class="col-xs-5 col-md-5 col-lg-6">
+              <div class="input-group">
+                <%= f.input_field :other, :class => "form-control", :placeholder => "Sum" %>
+                <span class="input-group-addon">NOK</span>
+              </div>
+            </div>
+            <div class="col-xs-4 col-md-4 col-lg-3">
+              <div class="input-group">
+                <%= f.input_field :other_rate, :class => "form-control", :placeholder => "0" %>
+                <span class="input-group-addon">%</span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <%= f.label :closing_date, "Closing", :class => "col-xs-3 col-md-3 control-label" %>
+            <div class="col-xs-5 col-md-5 col-lg-6">
+              <%= f.date_select :closing_date, { order: [:day, :month, :year] }, { :class => "form-control date-control" } %>
+            </div>
+            <div class="col-xs-4 col-md-4 col-lg-3">
+              <div class="input-group">
+                <%= f.input_field :probability, :class => "form-control", :placeholder => "0" %>
+                <span class="input-group-addon">%</span>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             <%= f.submit "Submit", :class => "btn btn-primary" %>
-        <% end %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
