--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -199,7 +199,7 @@
   <div class="form-group">
     <%= f.label :closing_date, "Closing", :class => "col-xs-3 col-md-3 control-label" %>
     <div class="col-xs-5 col-md-5 col-lg-6">
-      <%= f.date_field :closing_date, :class => "form-control" %>
+      <%= f.date_select :closing_date, { order: [:day, :month, :year] }, { :class => "form-control date-control" } %>
     </div>
     <div class="col-xs-4 col-md-4 col-lg-3">
       <div class="input-group">
