Update controllers and views

--- a/app/views/admin/offices.html.erb
+++ b/app/views/admin/offices.html.erb
@@ -29,7 +29,7 @@
         </tr>
         <tr>
           <th>Sellers</th>
-          <td>41</td>
+          <td><%= @office_now.users.count %></td>
         </tr>
       </table>
       <button class="btn btn-warning" data-toggle="modal" data-target="#editOffice">
