--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require jquery.ui.datepicker
  *= require_tree .
  *= require_self
  */
@@ -77,3 +78,8 @@ span.active {
   width: 32%;
   display: inline-block;
 }
+
+th a {
+  color: #000;
+}
+
