--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,9 +43,9 @@
         </ul>
         <form class="navbar-form navbar-right" role="search">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" class="form-control input-sm" placeholder="Search">
             <span class="input-group-btn">
-              <button class="btn btn-default" type="button">Go!</button>
+              <button class="btn btn-default btn-sm" type="button">Search</button>
             </span>
           </div><!-- /input-group -->
         </form>
