--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -13,16 +13,74 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-md-12">
+    <div class="panel-group" id="accordion">
+      <div class="panel panel-default">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              Show filters
+            </h4>
+          </div>
+        </a>
+        <div id="collapseOne" class="panel-collapse collapse <%= "in" if params[:commit] %>">
+          <div class="panel-body">
+            <%= form_tag sales_path, :method => 'get', :class => "form-horizontal" do %>
+              <%= hidden_field_tag :direction, params[:direction] %>
+              <%= hidden_field_tag :sort, params[:sort] %>
+
+              <div class="col-md-4">
+                <div class="form-group">
+                  <%= label_tag 'client', 'Client', :class => "col-md-3 control-label" %>
+                  <div class="col-md-9">
+                    <%= text_field_tag :client, params[:client], :class => "form-control input-sm" %>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="form-group">
+                  <%= label_tag 'date_from', 'From', :class => "col-md-3 control-label" %>
+                  <div class="col-md-9">
+                    <%= text_field_tag :date_from, params[:date_from], :class => "date-picker form-control input-sm" %>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="form-group">
+                  <%= label_tag 'date_to', 'To', :class => "col-md-3 control-label" %>
+                  <div class="col-md-9">
+                    <%= text_field_tag :date_to, params[:date_to], :class => "date-picker form-control input-sm" %>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-2 col-md-offset-1">
+                <div class="btn-group">
+                  <%= submit_tag "Filter", :class => "btn btn-primary btn-sm" %>
+                  <%= link_to "Clear", sales_path, :class => "btn btn-default btn-sm" %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
       <tr>
-        <th>#</th>
-        <th><%= t('sales.client') %></th>
-        <th><%= t('sales.date') %></th>
-        <th><%= t('sales.margin') %></th>
-        <th><%= t('sales.revenue') %></th>
-        <th><%= t('sales.state') %></th>
+        <th><%= sortable "id", "#" %></th>
+        <th><%= sortable "client.name", "Client" %></th>
+        <th><%= sortable "created_at", "Date" %></th>
+        <th><%= sortable "margin" %></th>
+        <th><%= sortable "revenue" %></th>
+        <th><%= sortable "state" %></th>
       </tr>
     </thead>
 
@@ -41,9 +99,22 @@
   </table>
 </div>
 
-
-
-
+<div class="row">
+  <div class="col-md-6">
+    <%= will_paginate @user_sales, renderer: BootstrapPagination::Rails %>
+  </div>
+  <div class="col-md-6">
+    <div class="btn-group pull-right">
+      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+        Download <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li><a href="#">Excel</a></li>
+        <li><a href="#">CSV</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 
 <div class="modal fade" id="newSale" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
